--- a/style.css
+++ b/style.css
@@ -13,15 +13,13 @@ body {
   transition: background-color 0.3s ease;
 }
 
-#btn-next {
-  padding: 10px 20px 10px 20px;
+#colorPicker {
+  margin-top: 10px;
+}
+#applyColor {
+  margin-top: 10px;
+  padding: 5px 10px 5px 10px;
   border-radius: 100%;
   background-color: transparent;
-  border: 2px solid #000;
-}
-
-#letters {
-  font-size: 5rem;
-  font-weight: bold;
-  color: #000;
+  border: 1px solid #000;
 }
